<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    tools:context=".MainButtonSixLevelFourActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="0dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tobokpur_kendro_one"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tobokpur_kendro_two"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tobokpur_kendro_three"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tobokpur_kendro_four"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tobokpur_kendro_five"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tobokpur_kendro_six"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tobokpur_kendro_seven"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tobokpur_kendro_eight"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tobokpur_kendro_nine"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tobokpur_kendro_ten"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tobokpur_kendro_eleven"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tobokpur_kendro_twoelve"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tobokpur_kendro_therteen"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tobokpur_kendro_fourteen"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tobokpur_kendro_fifteen"

        />

</LinearLayout>

</ScrollView>