<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:gravity="center_vertical"
    tools:context=".MainButttonSixActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="0dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/upozelaHeadQuater"

        />

    <Button
        android:id="@+id/ulipur_powrosova_union_button_id"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/ulipur_powrosova"

        />
    <Button
        android:id="@+id/gunaigas_union_button_id"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/gunaigas_union"

        />
    <Button
        android:id="@+id/tobokbur_union_button_id"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tobokpur_union"

        />
    <Button
        android:id="@+id/tethrai_union_button_id"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/tethrai_union"

        />
    <Button
        android:id="@+id/durgapur_union_button_id"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/durgapur_union"

        />
    <Button
        android:id="@+id/doldolia_union_button_id"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/doldolia_union"

        />
    <Button
        android:id="@+id/dhamsreni_union_button_id"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/dhamsreni_union"

        />
    <Button
        android:id="@+id/dhornibari_union_button_id"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/dharnibari_union"

        />
    <Button
        android:id="@+id/pandul_union_button_id"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/pandul_union"

        />
    <Button
        android:id="@+id/begum_union_button_id"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/begomgonj_union"

        />
    <Button
        android:id="@+id/buraburi_union_button_id"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/buraburi_union"

        />
    <Button
        android:id="@+id/bojra_union_button_id"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/bozra_union"

        />
    <Button
        android:id="@+id/hatia_union_button_id"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/hatia_union"

        />
    <Button
        android:id="@+id/saheberalga_union_button_id"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/saheber_alga_union"

        />


</LinearLayout>
</ScrollView>